fixed sort and filter elements positioning; fixed user-navigation in header overflow and positioning

--- a/css/style.css
+++ b/css/style.css
@@ -166,11 +166,18 @@ input[type="radio"].visually-hidden {
 .user-navigation {
 	display: flex;
 	flex-wrap: wrap;
-	width: 260px;
+	width: 325px;
 }
 
-.user-navigation li {
-	padding-right: 20px;
+.user-login {
+	margin-left: 76px;
+}
+
+.user-profile {
+	width: 240px;
+	text-align: right;
+	margin-right: 13px;
+	padding-right: 9px;
 }
 
 .user-login a:before,
@@ -236,8 +243,9 @@ input[type="radio"].visually-hidden {
 	flex-wrap: wrap;
 	position: relative;
 	
-	width: 500px;
-	margin-right: 41px;
+	width: 450px;
+	/*width: 500px;*/
+	margin-right: 15px;
 }
 
 .main-search input[type="text"] {
@@ -1822,12 +1830,14 @@ margin-top: 4px;
 
 .filter-header {
 	display: flex;
-	align-items: center;
+	/*align-items: center;*/
+	width: 200px;
+	min-height: 70px;
 	margin: 0;
 	margin-left: auto;
 	margin-right: 68px;
-	width: 200px;
-	min-height: 70px;
+	padding-top: 25px;
+	padding-bottom: 26px;
 
 	font-family: "gilroyextrabold", Arial, sans-serif;
 	font-size: 16px;
@@ -1899,6 +1909,8 @@ margin-top: 4px;
 .filter-cost-controls .toggle:active {
 	width: 22px;
 	height: 22px;
+	top: -1px;
+
 	border-width: 9px;
 	outline: 0;
 }
@@ -1911,6 +1923,14 @@ margin-top: 4px;
 .filter-cost-controls .toggle-max {
 	left: 110px;
 	margin-left: -2px;
+}
+
+.filter-cost-controls .toggle-min:active {
+	left: -1px;
+}
+
+.filter-cost-controls .toggle-max:active {
+	left: 109px;
 }
 
 .filter-cost-values {
@@ -2005,7 +2025,7 @@ margin-top: 4px;
 	position: absolute;
 	content: "";
 
-	left: -2px;
+	left: -1px;
 	top: 0;
 	margin-top: 8px;
 	margin-bottom: 9px;
@@ -2039,7 +2059,7 @@ margin-top: 4px;
 	position: absolute;
 	content: "";
 
-	left: -2px;
+	left: -1px;
 	top: 0;
 	margin-top: 6px;
 	margin-bottom: 9px;
@@ -2056,7 +2076,7 @@ margin-top: 4px;
 	position: absolute;
 	content: "";
 
-	left: 6px;
+	left: 7px;
 	top: 0;
 	margin-top: 14px;
 	margin-bottom: 17px;
@@ -2114,15 +2134,12 @@ margin-top: 4px;
 	width: 832px;
 	min-height: 70px;
 	padding-left: 72px;
-
-	/* --- TEMPORARY FOR GRID --- */
-	/*box-shadow: inset 0 0 0 1px;*/
-	/*background-color: orange;	*/
 }
 
 .sort h2 {
 	margin: 0;
-	margin-right: 51px;
+	margin-right: 20px;
+	width: 180px;
 	
 	font-family: "gilroyextrabold", Arial, sans-serif;
 	font-size: 16px;
@@ -2131,10 +2148,6 @@ margin-top: 4px;
 	color: #000000;
 	letter-spacing: .2em;
 	text-transform: uppercase;
-
-	/* --- TEMPORARY FOR GRID --- */
-	/*box-shadow: inset 0 0 0 1px;*/
-	/*background-color: rgba(255, 0, 0, .2);*/
 }
 
 .sort-by-option,
@@ -2147,12 +2160,8 @@ margin-top: 4px;
 
 .sort-by-option {
 	width: 300px;
-	padding-top: 19px;
-	padding-bottom: 21px;
-	/* --- TEMPORARY FOR GRID --- */
-	/*box-shadow: inset 0 0 0 1px;*/
-	/*background-color: rgba(255, 0, 0, .2);*/
-	/* -------------------------- */
+	padding-top: 18px;
+	padding-bottom: 22px;
 }
 
 .sort-by-option li:first-of-type {
@@ -2277,8 +2286,6 @@ a.sort-by-order-current:active::before {
 	display: flex;
 	flex-direction: column;
 	margin-top: 50px;
-	/* --- TEMPORARY FOR GRID --- */
-	/*box-shadow: inset 0 0 0 1px;	*/
 }
 
 .goods-list li:nth-of-type(odd) {
@@ -2419,10 +2426,7 @@ a.sort-by-order-current:active::before {
 }
 
 .pagination-item-prev {
-	/*min-width: 126px;*/
 	min-width: 140px;
-	/*margin-right: 197px;*/
-	/*padding-right: 14px;*/
 	margin-right: auto;
 	
 }
@@ -2433,7 +2437,6 @@ a.sort-by-order-current:active::before {
 }
 
 .pagination-item-next {
-	/*min-width: 137px;*/
 	min-width: 140px;
 	margin-left: auto;
 	text-align: right;
@@ -2442,14 +2445,6 @@ a.sort-by-order-current:active::before {
 .pagination-item-next a {
     padding-left: 32px;
 	padding-right: 28px;
-}
-
-.pagination-list li {
-	box-shadow: inset 0 0 0 1px;
-}
-
-.pagination-list li a {
-	box-shadow: inset 0 0 0 1px red;
 }
 
 .pagination-list li:not(:first-of-type):not(:last-of-type) {
